@@ -59,7 +59,6 @@ void siginthand(int j)
 		printf("Being killed\n");
 	}
 	die = 1;
-	signal(SIGHUP, oldsiginthand);
 }
 
 
@@ -294,7 +293,7 @@ int main(int argc, char **argv)
 	memset(&module, 0, sizeof(module));
 	module.bank = -1;
 
-	oldsiginthand = signal(SIGHUP, siginthand);
+	oldsiginthand = signal(SIGINT, siginthand);
 
 	if(strcmp(vsn, "AB") == 0)
 	{
