@@ -12,6 +12,7 @@ Version 1.3
 * rename .c to .cpp to reflect the fact that g++ is needed
 * close popen with pclose (suggested by Martin Ettl)
 * complain if /tmp or correlation destination directory are running low on space
+* update in-line help for mk5control
 
 Version 1.2
 ~~~~~~~~~~~
